@@ -1,6 +1,7 @@
 libnet 1.29  -- TODO
 
-  * TODO
+  * Fix PAUSE indexing problem. Net::POP3::_SSLified and Net::SMTP::_SSLified
+    are already used by Net-SSLGlue.
 
 libnet 1.28  -- Wed Oct 08 2014
 
